# dbt-alert

./: CNAME  README.md  SECURITY.md  dbt_project.yml  mkdocs.yml  package-lock.yml  pyproject.toml
.github/workflows/: ci-pr.yml
1.0/: 404.html  contributing.html  getting-started-snowflake.html  index.html  sitemap.xml  triggering-your-job.html
1.0-beta/: 404.html  adding-your-job.html  contributing.html  getting-started-snowflake.html  index.html  sitemap.xml  triggering-your-job.html
1.0-beta/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.0-beta/search/: search_index.js  search_index.json
1.0/assets/js/: custom.js
1.0/dbt-docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
1.0/search/: search_index.js  search_index.json
docs/: contributing.md  getting-started-snowflake.md  getting-started.md  index.md  triggering-your-job.md
docs/assets/js/: custom.js
docs/overrides/: main.html
integration_tests/: dbt_project.yml  package-lock.yml
integration_tests/ci/: ci.profiles.yml  sf-init.sql
integration_tests/macros/custom-tests/: not_empty.sql
integration_tests/macros/sample-jobs/: dbt_alert_job__sample_1.sql  dbt_alert_job__sample_2.sql
integration_tests/models/: verify_notification_integration_object_creation.sql  verify_notification_integration_object_creation.yml
macros/engine/execution/: execute_job.yml  execute_jobs.sql
macros/engine/execution/sql/: get_sql_send_email.sql
macros/engine/resource/: create_or_get_resource.sql  create_or_get_resource.yml
macros/engine/utils/: get_mailing_list.sql  get_mailing_list.yml
macros/execution/: execute_job.sql  execute_job.yml  execute_jobs.yml
macros/execution/sql/: get_sql_send_email.sql  get_sql_send_email.yml  get_sql_send_event.sql
macros/resource/: create_or_get_resource.sql  create_or_get_resource.yml
macros/utils/: get_mailing_list.yml
